update api docs for clientId addition
